tests/good/interpret/008-def.clap
val x = 
  val y = 42 in
  y

