tests/bad/interpret/005-app-int.clap
val f = 42
val x = f 12
